--- a/json_editor/index.html
+++ b/json_editor/index.html
@@ -20,6 +20,7 @@
       padding: 10px 20px;
       font-size: 16px;
       cursor: pointer;
+      margin-right: 10px;
     }
   </style>
 </head>
@@ -31,6 +32,7 @@
     <textarea id="exampleCode" placeholder="Example Code (optional)" rows="4"></textarea>
     <button onclick="addLesson()">Add Lesson</button>
     <button onclick="downloadJSON()">Download JSON</button>
+    <button onclick="loadJSON()">Load JSON</button>
   </div>
   <pre id="jsonOutput"></pre>
   <script src="script.js"></script>
