--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body>
-    <header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home</title>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
+        <header>
     <h1>OS Creation Course</h1>
     <nav>
         <ul>
@@ -21,8 +21,8 @@
     </nav>
 </header>
 
-    <main>
         <main>
+            <main>
     <div class="container">
         <section id="overview" class="active">
             <h2>Course Overview</h2>
@@ -73,11 +73,21 @@
 <li><a href="https://docs.github.com/en/pages">GitHub Pages Documentation</a></li>
 </ul>
 </section>
+<!-- OS Selection Modal -->
+<div id="osModal" class="modal">
+<div class="modal-content">
+<h2>Welcome! Select Your OS</h2>
+<p>Which operating system are you using?</p>
+<button onclick="selectOS('Windows')">Windows</button>
+<button onclick="selectOS('Linux')">Linux</button>
+<button onclick="selectOS('MacOS')">MacOS</button>
+</div>
+</div>
 </div></p>
 </main>
 
-    </main>
-    <footer>
+        </main>
+        <footer>
     <section id="resources">
         <h2>Additional Resources</h2>
         <ul>
@@ -88,5 +98,5 @@
     <p>&copy; 2024 OS Creation Course. All rights reserved.</p>
 </footer>
 <script src="js/scripts.js"></script>
-</body>
+    </body>
 </html>
