--- a/lessons/lesson1.html
+++ b/lessons/lesson1.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ lesson.title }}</title>
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body>
-    <header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{{ lesson.title }}</title>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
+        <header>
     <h1>OS Creation Course</h1>
     <nav>
         <ul>
@@ -21,14 +21,14 @@
     </nav>
 </header>
 
-    <main>
-        
+        <main>
+            
 <h1>Lesson 1: Introduction to OS Development</h1>
 <p>Welcome to the first lesson. You will start by learning a few estils about the pc. The few major things you will need to know are about the cpu, the bios, the ram and the storage drive.</p>
 <a href="/quizzes/lesson1.html">Take Quiz</a>
 
-    </main>
-    <footer>
+        </main>
+        <footer>
     <section id="resources">
         <h2>Additional Resources</h2>
         <ul>
@@ -39,5 +39,5 @@
     <p>&copy; 2024 OS Creation Course. All rights reserved.</p>
 </footer>
 <script src="js/scripts.js"></script>
-</body>
+    </body>
 </html>
