--- a/lessons/lesson3.html
+++ b/lessons/lesson3.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ lesson.title }}</title>
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body>
-    <header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{{ lesson.title }}</title>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
+        <header>
     <h1>OS Creation Course</h1>
     <nav>
         <ul>
@@ -21,14 +21,14 @@
     </nav>
 </header>
 
-    <main>
-        
+        <main>
+            
 <h1>Lesson 3: Knowing the boot process</h1>
 <p>In this lesson, you will learn the typical boot process of an x86 system.</p>
 <a href="/quizzes/lesson3.html">Take Quiz</a>
 
-    </main>
-    <footer>
+        </main>
+        <footer>
     <section id="resources">
         <h2>Additional Resources</h2>
         <ul>
@@ -39,5 +39,5 @@
     <p>&copy; 2024 OS Creation Course. All rights reserved.</p>
 </footer>
 <script src="js/scripts.js"></script>
-</body>
+    </body>
 </html>
