--- a/quizzes/lesson1.html
+++ b/quizzes/lesson1.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz for {{ quiz.id }}</title>
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body>
-    <header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Quiz for {{ quiz.id }}</title>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
+        <header>
     <h1>OS Creation Course</h1>
     <nav>
         <ul>
@@ -21,8 +21,8 @@
     </nav>
 </header>
 
-    <main>
-        
+        <main>
+            
 <h1>Quiz for lesson1</h1>
 <form id="quizForm">
   
@@ -48,8 +48,8 @@
 </div>
 <script src="/js/scripts.js"></script>
 
-    </main>
-    <footer>
+        </main>
+        <footer>
     <section id="resources">
         <h2>Additional Resources</h2>
         <ul>
@@ -60,5 +60,5 @@
     <p>&copy; 2024 OS Creation Course. All rights reserved.</p>
 </footer>
 <script src="js/scripts.js"></script>
-</body>
+    </body>
 </html>
