--- a/lessons/lesson1.html
+++ b/lessons/lesson1.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{{ lesson.title }}</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <title>Lesson 1: Introduction to OS Development</title>
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
         <header>
@@ -38,6 +38,6 @@
     </section>
     <p>&copy; 2024 OS Creation Course. All rights reserved.</p>
 </footer>
-<script src="js/scripts.js"></script>
+<script src="/js/scripts.js"></script>
     </body>
 </html>
