--- a/quizzes/lesson2.html
+++ b/quizzes/lesson2.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Quiz for {{ quiz.id }}</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <title>Quiz for lesson2</title>
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
         <header>
@@ -59,6 +59,6 @@
     </section>
     <p>&copy; 2024 OS Creation Course. All rights reserved.</p>
 </footer>
-<script src="js/scripts.js"></script>
+<script src="/js/scripts.js"></script>
     </body>
 </html>
