deploy: 4af244eb017b02eca3a91d2e99f707cd4f23c405

--- a/lessons/lesson1.html
+++ b/lessons/lesson1.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lesson 1: Introduction to OS Development</title>
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="/SynthCodeLab/css/styles.css">
     </head>
     <body>
         <header>
@@ -38,6 +38,6 @@
     </section>
     <p>&copy; 2024 OS Creation Course. All rights reserved.</p>
 </footer>
-<script src="/js/scripts.js"></script>
+<script src="/SynthCodeLab/js/scripts.js"></script>
     </body>
 </html>
