deploy: e65a0793cd789bbf1418b4c0af0824e277f90f72

--- a/lessons/lesson1.html
+++ b/lessons/lesson1.html
@@ -25,7 +25,7 @@
             
 <h1>Lesson 1: Introduction to OS Development</h1>
 <p>Welcome to the first lesson. You will start by learning a few estils about the pc. The few major things you will need to know are about the cpu, the bios, the ram and the storage drive.</p>
-<a href="/quizzes/lesson1.html">Take Quiz</a>
+<a href="/SynthCodeLab/quizzes/lesson1.html">Take Quiz</a>
 
         </main>
         <footer>
