--- a/lessons/lesson3.html
+++ b/lessons/lesson3.html
@@ -25,7 +25,7 @@
             
 <h1>Lesson 3: Knowing the boot process</h1>
 <p>In this lesson, you will learn the typical boot process of an x86 system.</p>
-<a href="/quizzes/lesson3.html">Take Quiz</a>
+<a href="/SynthCodeLab/quizzes/lesson3.html">Take Quiz</a>
 
         </main>
         <footer>
