--- a/quizzes/lesson1.html
+++ b/quizzes/lesson1.html
@@ -43,10 +43,10 @@
 <div id="nextLesson" style="display: none;">
   
   
-  <a href="/lessons/lesson2.html"><button>Go to Next Lesson</button></a>
+  <a href="/SynthCodeLab/lessons/lesson2.html"><button>Go to Next Lesson</button></a>
   
 </div>
-<script src="/js/scripts.js"></script>
+<script src="/SynthCodeLab/js/scripts.js"></script>
 
         </main>
         <footer>
