--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
         <link rel="stylesheet" href="/SynthCodeLab/css/styles.css">
+          <script>
+            window.baseUrl = '/SynthCodeLab/';
+        </script>
     </head>
     <body>
         <header>
