--- a/lessons/lesson2.html
+++ b/lessons/lesson2.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lesson 2: Knowing the boot process</title>
         <link rel="stylesheet" href="/SynthCodeLab/css/styles.css">
+          <script>
+            window.baseUrl = '/SynthCodeLab/';
+        </script>
     </head>
     <body>
         <header>
