--- a/lessons/lesson1.html
+++ b/lessons/lesson1.html
@@ -25,10 +25,13 @@
 </header>
 
         <main>
-            
-<h1>Lesson 1: Introduction to OS Development</h1>
-<p>Welcome to the first lesson. You will start by learning a few estils about the pc. The few major things you will need to know are about the cpu, the bios, the ram and the storage drive.</p>
-<a href="/SynthCodeLab/quizzes/lesson1.html">Take Quiz</a>
+            <main>
+    <div class="container">
+      <h1>Lesson 1: Introduction to OS Development</h1>
+      <p>Welcome to the first lesson. You will start by learning a few estils about the pc. The few major things you will need to know are about the cpu, the bios, the ram and the storage drive.</p>
+      <a href="/SynthCodeLab/quizzes/lesson1.html">Take Quiz</a>
+    </div>
+</main>
 
         </main>
         <footer>
