--- a/lessons/lesson3.html
+++ b/lessons/lesson3.html
@@ -25,10 +25,13 @@
 </header>
 
         <main>
-            
-<h1>Lesson 3: Knowing the boot process</h1>
-<p>In this lesson, you will learn the typical boot process of an x86 system.</p>
-<a href="/SynthCodeLab/quizzes/lesson3.html">Take Quiz</a>
+            <main>
+    <div class="container">
+      <h1>Lesson 3: Knowing the boot process</h1>
+      <p>In this lesson, you will learn the typical boot process of an x86 system.</p>
+      <a href="/SynthCodeLab/quizzes/lesson3.html">Take Quiz</a>
+    </div>
+</main>
 
         </main>
         <footer>
