deploy: 5dc821245034a8bc643be2a30fd08a5ef0d5a35f

--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
 <p><li><a href="lessons/lesson2.html">Lesson 2: Knowing the boot process</a></li></p>
 <p><li><a href="lessons/lesson3.html">Lesson 3: Knowing the boot process</a></li></p>
 <p><li><a href="lessons/lesson4.html">Lesson 4: Knowing the boot process</a></li></p>
+<p><li><a href="lessons/lesson5.html">Lesson 2: Writing a Simple Bootloader</a></li></p>
+<p><li><a href="lessons/lesson6.html">Lesson 3: Displaying a Character on Screen</a></li></p>
+<p><li><a href="lessons/lesson7.html">Lesson 4: Displaying a String on Screen</a></li></p>
+<p><li><a href="lessons/lesson8.html">Lesson 5: Adding More Functionality</a></li></p>
+<p><li><a href="lessons/lesson9.html">Lesson 6: Understanding Memory Segmentation</a></li></p>
+<p><li><a href="lessons/lesson10.html">Lesson 7: Switching to 32-bit Protected Mode</a></li></p>
+<p><li><a href="lessons/lesson11.html">Lesson 8: Understanding Protected Mode</a></li></p>
+<p><li><a href="lessons/lesson12.html">Lesson 9: Setting Up a Simple Kernel</a></li></p>
+<p><li><a href="lessons/lesson13.html">Lesson 10: Loading the Kernel</a></li></p>
+<p><li><a href="lessons/lesson14.html">Lesson 11: Writing a Kernel in C</a></li></p>
+<p><li><a href="lessons/lesson15.html">Lesson 12: Combining Bootloader and Kernel</a></li></p>
+<p><li><a href="lessons/lesson16.html">Lesson 13: Writing a Kernel in Pure Assembly</a></li></p>
 <p></ol>
 </div>
 </section></p>
