--- a/lessons/lesson11.html
+++ b/lessons/lesson11.html
@@ -34,6 +34,8 @@ Protected mode allows the CPU to access more memory and provides advanced featur
 
     GDT: The Global Descriptor Table defines the properties of memory segments.
     Descriptors: Entries in the GDT that define base address, limit, and access rights of memory segments.</p>
+      <p><strong>Example Code:</strong></p>
+      <pre></pre>
       <a href="/SynthCodeLab/quizzes/lesson11.html">Take Quiz</a>
     </div>
 </main>
