--- a/lessons/lesson4.html
+++ b/lessons/lesson4.html
@@ -29,6 +29,8 @@
     <div class="container">
       <h1>Lesson 4: Knowing the boot process</h1>
       <p>In this lesson, you will learn the typical boot process of an x86 system.</p>
+      <p><strong>Example Code:</strong></p>
+      <pre></pre>
       <a href="/SynthCodeLab/quizzes/lesson4.html">Take Quiz</a>
     </div>
 </main>
