--- a/lessons/lesson1.html
+++ b/lessons/lesson1.html
@@ -29,6 +29,8 @@
     <div class="container">
       <h1>Lesson 1: Introduction to OS Development</h1>
       <p>Welcome to the first lesson. You will start by learning a few estils about the pc. The few major things you will need to know are about the cpu, the bios, the ram and the storage drive.</p>
+      <p><strong>Example Code:</strong></p>
+      <pre></pre>
       <a href="/SynthCodeLab/quizzes/lesson1.html">Take Quiz</a>
     </div>
 </main>
